GNOME Bugzilla – Bug 629546
missing prototype definition for dh_util_state_load_books_disabled
Last modified: 2010-09-14 10:25:32 UTC
+++ This bug was initially created as a clone of Bug #629174 +++ commit ee54234517aea3bab98118c40514b69ee054e008 introduced a build / link error: +dh_util_state_load_books_disabled is defined in dh-utils.c, but the prototype in dh-utils.h got not changed. As a consequence, it is undefined in dh-book-manager.c
Created attachment 170177 [details] [review] Also rename the prototypes
commit 459d7f54474bd5299e374b2184e74decc91e7f15 Author: Bastien Nocera <hadess@hadess.net> Date: Tue Sep 14 11:20:57 2010 +0100 Fix prototype of dh_util_state_load_books_disabled() Spotted by Dominique Leuenberger <dominique-gnomezilla@leuenberger.net> https://bugzilla.gnome.org/show_bug.cgi?id=629546