Fix prototype of dh_util_state_load_books_disabled()

Spotted by Dominique Leuenberger <dominique-gnomezilla@leuenberger.net>

https://bugzilla.gnome.org/show_bug.cgi?id=629546